Создано навигационное меню, подключины шрифты и normalize.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/normalize.css">
   <title>webDevelopment</title>
 </head>
 <body>
-  
+  <header class="header">
+    <div class="navbar">
+      <div class="container">
+        <div class="navbar-wrap">
+            <div class="navbar-logo navbar__logo">Your Logo</div>
+            <ul class="navbar-menu navbar__menu">
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Home</a>
+              </li>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">About</a>
+              </li>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Servicing</a>
+              </li>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Portfolio</a>
+              </li>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Blog</a>
+              </li>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Contact us</a>
+              </li>
+            </ul>
+            <div class="navbar-search">
+              <span class="navbar-search__icon"></span>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="hero">
+    </div>
+  </header>
 </body>
 </html>
