--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
       </div>
     </div>
     <div class="hero">
+      <div class="container">
+        <div class="hero-content">
+          <div class="hero-wrap">
+            <h1 class="hero-content__title">Web development project</h1>
+            <p class="hero-content__description">Very suitable to support all web development projects</p>
+            <div class="hero-content__buttons-wrap">
+              <button class="button hero-content__button-first">Our services</button>
+              <button class="button hero-content__button-second">here is now</button>
+              <a href="#" class="hero-content__button-anchorLink"></a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </header>
 </body>
