Адаптирован блок навигации и hero под экраны планшетов и телефонов

--- a/index.html
+++ b/index.html
@@ -14,28 +14,35 @@
       <div class="container">
         <div class="navbar-wrap">
             <div class="navbar-logo navbar__logo">Your Logo</div>
-            <ul class="navbar-menu navbar__menu">
-              <li class="navbar-menu__item">
-                <a href="#" class="navbar-menu__link">Home</a>
-              </li>
-              <li class="navbar-menu__item">
-                <a href="#" class="navbar-menu__link">About</a>
-              </li>
-              <li class="navbar-menu__item">
-                <a href="#" class="navbar-menu__link">Servicing</a>
-              </li>
-              <li class="navbar-menu__item">
-                <a href="#" class="navbar-menu__link">Portfolio</a>
-              </li>
-              <li class="navbar-menu__item">
-                <a href="#" class="navbar-menu__link">Blog</a>
-              </li>
-              <li class="navbar-menu__item">
-                <a href="#" class="navbar-menu__link">Contact us</a>
-              </li>
-            </ul>
-            <div class="navbar-search">
-              <span class="navbar-search__icon"></span>
+            <div class="navbar-wrap__menu">
+              <button class="navbar-menu__button button">
+                <span class="navbar-menu__button-line"></span>
+                <span class="navbar-menu__button-line"></span>
+                <span class="navbar-menu__button-line"></span>
+              </button>
+              <ul class="navbar-menu navbar__menu">
+                <li class="navbar-menu__item">
+                  <a href="#" class="navbar-menu__link">Home</a>
+                </li>
+                <li class="navbar-menu__item">
+                  <a href="#" class="navbar-menu__link">About</a>
+                </li>
+                <li class="navbar-menu__item">
+                  <a href="#" class="navbar-menu__link">Servicing</a>
+                </li>
+                <li class="navbar-menu__item">
+                  <a href="#" class="navbar-menu__link">Portfolio</a>
+                </li>
+                <li class="navbar-menu__item">
+                  <a href="#" class="navbar-menu__link">Blog</a>
+                </li>
+                <li class="navbar-menu__item">
+                  <a href="#" class="navbar-menu__link">Contact us</a>
+                </li>
+              </ul>
+              <div class="navbar-search">
+                <span class="navbar-search__icon"></span>
+              </div>
             </div>
         </div>
       </div>
