Создана секция 'About us' адаптирована под мобильные устройства и планшеты

--- a/index.html
+++ b/index.html
@@ -63,5 +63,32 @@
       </div>
     </div>
   </header>
+  <section class="aboutUs">
+    <div class="container">
+      <div class="preface__wrap">
+        <div class="preface aboutUs__preface">
+          <h2 class="preface__title aboutUs__title">About Us</h2>
+          <p  class="preface__subtitle aboutUs__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        </div>
+      </div>
+      <div class="aboutUs__content">
+        <div class="aboutUs-content-item">
+          <img src="img/AboutUs-icons/internet.png" alt="internet icon">
+          <h3 class="aboutUs-content-item__title">Awesome Icons</h3>
+          <p class="aboutUs-content-item__description">Lorem ipsum dolor sit amet, con- sectetur adipisicing elit, sed do eiusmod tempor</p>
+        </div>
+        <div class="aboutUs-content-item">
+          <img src="img/AboutUs-icons/transfer.png" alt="transfer icon">
+          <h3 class="aboutUs-content-item__title">One Page</h3>
+          <p class="aboutUs-content-item__description">Lorem ipsum dolor sit amet, con- sectetur adipisicing elit, sed do eiusmod tempor</p>
+        </div>
+        <div class="aboutUs-content-item">
+          <img src="img/AboutUs-icons/head.png" alt="head icon">
+          <h3 class="aboutUs-content-item__title">Fully Responsive</h3>
+          <p class="aboutUs-content-item__description">Lorem ipsum dolor sit amet, con- sectetur adipisicing elit, sed do eiusmod tempor</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
