Создан блок 'Out Services' адаптирован для мобильных и планшетных устройств. Устранены некоторые недоработки

--- a/index.html
+++ b/index.html
@@ -56,36 +56,84 @@
             <div class="hero-content__buttons-wrap">
               <button class="button hero-content__button-first">Our services</button>
               <button class="button hero-content__button-second">here is now</button>
-              <a href="#" class="hero-content__button-anchorLink"></a>
+              <a href="#aboutUs" class="hero-content__button-anchorLink"></a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </header>
-  <section class="aboutUs">
+  <section id="aboutUs" class="aboutUs">
     <div class="container">
-      <div class="preface__wrap">
-        <div class="preface aboutUs__preface">
-          <h2 class="preface__title aboutUs__title">About Us</h2>
-          <p  class="preface__subtitle aboutUs__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+      <div class="preface">
+        <div class="preface__wrap">
+          <h2 class="preface__title">About Us</h2>
+          <p  class="preface__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
         </div>
       </div>
       <div class="aboutUs__content">
         <div class="aboutUs-content-item">
-          <img src="img/AboutUs-icons/internet.png" alt="internet icon">
+          <img src="img/aboutUs-icons/internet.png" alt="internet icon">
           <h3 class="aboutUs-content-item__title">Awesome Icons</h3>
           <p class="aboutUs-content-item__description">Lorem ipsum dolor sit amet, con- sectetur adipisicing elit, sed do eiusmod tempor</p>
         </div>
         <div class="aboutUs-content-item">
-          <img src="img/AboutUs-icons/transfer.png" alt="transfer icon">
+          <img src="img/aboutUs-icons/transfer.png" alt="transfer icon">
           <h3 class="aboutUs-content-item__title">One Page</h3>
           <p class="aboutUs-content-item__description">Lorem ipsum dolor sit amet, con- sectetur adipisicing elit, sed do eiusmod tempor</p>
         </div>
         <div class="aboutUs-content-item">
-          <img src="img/AboutUs-icons/head.png" alt="head icon">
+          <img src="img/aboutUs-icons/head.png" alt="head icon">
           <h3 class="aboutUs-content-item__title">Fully Responsive</h3>
           <p class="aboutUs-content-item__description">Lorem ipsum dolor sit amet, con- sectetur adipisicing elit, sed do eiusmod tempor</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="ourServices">
+    <div class="container">
+      <div class="preface">
+        <div class="preface__wrap">
+          <h2 class="preface__title">Our Services</h2>
+          <p class="preface__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        </div>
+        <div class="ourServices-content">
+          <div class="ourServices-content-item">
+            <img src="img/ourServices-icons/smartphoneBlack.png" alt="services icon" class="ourServices-content-item__img">
+            <h3 class="ourServices-content-item__title">Research</h3>
+            <p class="ourServices-content-item__description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+            <button class="ourServices-content-item__button button">read more</button>
+          </div>
+          <div class="ourServices-content-item">
+            <img src="img/ourServices-icons/smartphoneBlack.png" alt="services icon" class="ourServices-content-item__img">
+            <h3 class="ourServices-content-item__title">Portfolio</h3>
+            <p class="ourServices-content-item__description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+            <button class="ourServices-content-item__button button">read more</button>
+          </div>
+          <div class="ourServices-content-item">
+            <img src="img/ourServices-icons/smartphoneBlack.png" alt="services icon" class="ourServices-content-item__img">
+            <h3 class="ourServices-content-item__title">Support</h3>
+            <p class="ourServices-content-item__description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+            <button class="ourServices-content-item__button button">read more</button>
+          </div>
+          <div class="ourServices-content-item">
+            <img src="img/ourServices-icons/smartphoneBlack.png" alt="services icon" class="ourServices-content-item__img">
+            <h3 class="ourServices-content-item__title">Documentation</h3>
+            <p class="ourServices-content-item__description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+            <button class="ourServices-content-item__button button">read more</button>
+          </div>
+          <div class="ourServices-content-item">
+            <img src="img/ourServices-icons/smartphoneBlack.png" alt="services icon" class="ourServices-content-item__img">
+            <h3 class="ourServices-content-item__title">Development</h3>
+            <p class="ourServices-content-item__description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+            <button class="ourServices-content-item__button button">read more</button>
+          </div>
+          <div class="ourServices-content-item">
+            <img src="img/ourServices-icons/smartphoneBlack.png" alt="services icon" class="ourServices-content-item__img">
+            <h3 class="ourServices-content-item__title">Design</h3>
+            <p class="ourServices-content-item__description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
+            <button class="ourServices-content-item__button button">read more</button>
+        </div>
         </div>
       </div>
     </div>
