Создана секция 'Последние работы' адаптирована под мобильные устройства и планшеты

--- a/index.html
+++ b/index.html
@@ -133,8 +133,85 @@
             <h3 class="ourServices-content-item__title">Design</h3>
             <p class="ourServices-content-item__description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum iti atque corrupti quos.</p>
             <button class="ourServices-content-item__button button">read more</button>
+          </div>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="latestWorks">
+    <div class="container">
+      <div class="preface">
+        <div class="preface__wrap">
+          <div class="preface__title">Latest Works</div>
+          <div class="preface__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</div>
         </div>
+      </div>
+      <div class="latestWorks-buttons">
+        <div class="latestWorks-buttons-wrap">
+          <div class="latestWorks-buttons__button button">All</div>
+          <div class="latestWorks-buttons__button button">Web design</div>
+          <div class="latestWorks-buttons__button button">Ui/Ux Design</div>
+          <div class="latestWorks-buttons__button button">Mockups</div>
+        </div>
+      </div>
+      <div class="latestWorks-content">
+        <div class="latestWorks-content-item">
+          <img src="img/latestWorks/watch.jpg" alt="" class="latestWorks-content__img">
+            <div class="latestWorks-content__item-description">
+              <div class="latestWorks-content__item-wrap">
+                <h3 class="latestWorks-content__item-title">Hand Watch</h3>
+                <p class="latestWorks-content__item-subtitle">ui/ux design</p>
+              </div>  
+            </div> 
+        </div>
+        <div class="latestWorks-content-item">
+          <img src="img/latestWorks/pass.jpg" alt="" class="latestWorks-content__img">
+            <div class="latestWorks-content__item-description">
+              <div class="latestWorks-content__item-wrap">
+                <h3 class="latestWorks-content__item-title">One Day Pass</h3>
+                <p class="latestWorks-content__item-subtitle">mockups</p>
+              </div> 
+            </div>         
+        </div>
+        <div class="latestWorks-content-item">
+          <img src="img/latestWorks/t-shirt.jpg" alt="" class="latestWorks-content__img">
+            <div class="latestWorks-content__item-description">
+              <div class="latestWorks-content__item-wrap">
+                <h3 class="latestWorks-content__item-title">Modal T-shift</h3>
+                <p class="latestWorks-content__item-subtitle">web design</p>
+              </div>
+            </div>
+        </div>
+        <div class="latestWorks-content-item">
+          <img src="img/latestWorks/flask.jpg" alt="" class="latestWorks-content__img">
+            <div class="latestWorks-content__item-description">
+              <div class="latestWorks-content__item-wrap">
+                <h3 class="latestWorks-content__item-title">Flask</h3>
+                <p class="latestWorks-content__item-subtitle">mockups</p>
+              </div> 
+            </div>         
+        </div>
+        <div class="latestWorks-content-item">
+          <img src="img/latestWorks/wine.jpg" alt="" class="latestWorks-content__img">
+            <div class="latestWorks-content__item-description">
+              <div class="latestWorks-content__item-wrap">
+                <h3 class="latestWorks-content__item-title">Spacial Wine</h3>
+                <p class="latestWorks-content__item-subtitle">ui/ux design</p> 
+              </div>
+            </div>
+        </div>
+        <div class="latestWorks-content-item">
+          <img src="img/latestWorks/bag.jpg" alt="" class="latestWorks-content__img">
+            <div class="latestWorks-content__item-description">
+              <div class="latestWorks-content__item-wrap">
+                <h3 class="latestWorks-content__item-title">The Kitchen Bag</h3>
+                <p class="latestWorks-content__item-subtitle">web design</p>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="latestWorks-button">
+        <button class="latestWorks__button button">View all</button>
       </div>
     </div>
   </section>
