Создана разметка секции 'Ценовой план' адаптирована под мобильные устройства и планшеты

--- a/index.html
+++ b/index.html
@@ -215,5 +215,56 @@
       </div>
     </div>
   </section>
+  <section class="pricingPlan">
+    <div class="container">
+        <div class="preface">
+            <div class="preface__wrap">
+              <h2 class="preface__title">Pricing Plan</h2>
+              <p class="preface__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+            </div>
+        </div>
+        <div class="pricingPlan-content">
+          <div class="pricingPlan-content-item">
+            <div class="pricingPlan-content-item__title-wrap">
+              <p class="pricingPlan-content-item__description">Free Trail</p>
+              <h3 class="pricingPlan-content-item__title"><span class="pricingPlan-content-item__title-up">$</span>00<span class="pricingPlan-content-item__title-down"> per month</span></h3>
+            </div>
+            <ul class="pricingPlan-content-item__list">
+              <li class="pricingPlan-content-item__list-item">30 Free Trail</li>
+              <li class="pricingPlan-content-item__list-item">5 Free Projects</li>
+              <li class="pricingPlan-content-item__list-item">PHP 5 Enabled</li>
+              <li class="pricingPlan-content-item__list-item">24/7 Suports</li>
+            </ul>
+            <button class="pricingPlan-content-item__button button">Order Now</button>
+          </div>
+          <div class="pricingPlan-content-item">
+            <div class="pricingPlan-content-item__title-wrap">
+              <p class="pricingPlan-content-item__description">Basic</p>
+              <h3 class="pricingPlan-content-item__title"><span class="pricingPlan-content-item__title-up">$</span>50<span class="pricingPlan-content-item__title-down"> per month</span></h3>
+            </div>
+            <ul class="pricingPlan-content-item__list">
+              <li class="pricingPlan-content-item__list-item">30 Free Trail</li>
+              <li class="pricingPlan-content-item__list-item">5 Free Projects</li>
+              <li class="pricingPlan-content-item__list-item">PHP 5 Enabled</li>
+              <li class="pricingPlan-content-item__list-item">24/7 Suports</li>
+            </ul>
+            <button class="pricingPlan-content-item__button button">Order Now</button>
+          </div>
+          <div class="pricingPlan-content-item">
+            <div class="pricingPlan-content-item__title-wrap">
+              <p class="pricingPlan-content-item__description">Ultimates</p>
+              <h3 class="pricingPlan-content-item__title"><span class="pricingPlan-content-item__title-up">$</span>99<span class="pricingPlan-content-item__title-down"> per month</span></h3>
+            </div>
+            <ul class="pricingPlan-content-item__list">
+              <li class="pricingPlan-content-item__list-item">30 Free Trail</li>
+              <li class="pricingPlan-content-item__list-item">5 Free Projects</li>
+              <li class="pricingPlan-content-item__list-item">PHP 5 Enabled</li>
+              <li class="pricingPlan-content-item__list-item">24/7 Suports</li>
+            </ul>
+            <button class="pricingPlan-content-item__button button">Order Now</button>
+          </div>
+        </div>
+    </div>
+  </section>
 </body>
 </html>
