Создана разметра сеции 'Наша команда', адаптирована для мобильных и планшетных устройств

--- a/index.html
+++ b/index.html
@@ -266,5 +266,55 @@
         </div>
     </div>
   </section>
+  <section class="ourTeam">
+    <div class="container">
+      <div class="preface">
+        <div class="preface__wrap">
+          <div class="preface__title">Our Team Member</div>
+          <div class="preface__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</div>
+        </div>
+      </div>
+      <div class="ourTeam-content">
+        <div class="ourTeam-content-item">
+          <img class="ourTeam-content-item__img" src="img/ourTeam/John.jpg" alt="photo of John" class="ourTeam-content-item__img">
+          <h2 class="ourTeam-content-item__title">John Doe</h2>
+          <p class="ourTeam-content-item__subtitle">General Manager</p>
+          <div class="ourTeam-content-item-social">
+            <span class="ourTeam-content-item__social-icon"></span>
+            <span class="ourTeam-content-item__social-icon"></span>
+            <span class="ourTeam-content-item__social-icon"></span>
+            <span class="ourTeam-content-item__social-icon"></span>
+          </div>
+        </div>
+        <div class="ourTeam-content-item">
+          <img class="ourTeam-content-item__img" src="img/ourTeam/Alexa.jpg" alt="photo of Alexa" class="ourTeam-content-item__img">
+          <h2 class="ourTeam-content-item__title">Alexa Biru</h2>
+          <p class="ourTeam-content-item__subtitle">Office Director</p>
+          <div class="ourTeam-content-item-social">
+            <span class="ourTeam-content-item__social-icon"></span>
+            <span class="ourTeam-content-item__social-icon"></span>
+            <span class="ourTeam-content-item__social-icon"></span>
+            <span class="ourTeam-content-item__social-icon"></span>
+          </div>
+        </div>
+        <div class="ourTeam-content-item">
+          <img class="ourTeam-content-item__img" src="img/ourTeam/Ronobir.jpg" alt="photo of Ronobir" class="ourTeam-content-item__img">
+          <h2 class="ourTeam-content-item__title">Ronobir sing</h2>
+          <p class="ourTeam-content-item__subtitle">Admin</p>
+          <div class="ourTeam-content-item-social">
+            <span class="ourTeam-content-item__social-icon"></span>
+            <span class="ourTeam-content-item__social-icon"></span>
+            <span class="ourTeam-content-item__social-icon"></span>
+            <span class="ourTeam-content-item__social-icon"></span>
+          </div>
+        </div>
+      </div>
+      <div class="ourTeam-slider-buttons">
+        <button class="ourTeam-slider__button"></button>
+        <button class="ourTeam-slider__button"></button>
+        <button class="ourTeam-slider__button"></button>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
