Создана разметка секции 'Блог' адаптированна под мобильные и планшетные устройства

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       <div class="ourTeam-content">
         <div class="ourTeam-content-item">
           <img class="ourTeam-content-item__img" src="img/ourTeam/John.jpg" alt="photo of John" class="ourTeam-content-item__img">
-          <h2 class="ourTeam-content-item__title">John Doe</h2>
+          <h3 class="ourTeam-content-item__title">John Doe</h3>
           <p class="ourTeam-content-item__subtitle">General Manager</p>
           <div class="ourTeam-content-item-social">
             <span class="ourTeam-content-item__social-icon"></span>
@@ -288,7 +288,7 @@
         </div>
         <div class="ourTeam-content-item">
           <img class="ourTeam-content-item__img" src="img/ourTeam/Alexa.jpg" alt="photo of Alexa" class="ourTeam-content-item__img">
-          <h2 class="ourTeam-content-item__title">Alexa Biru</h2>
+          <h3 class="ourTeam-content-item__title">Alexa Biru</h3>
           <p class="ourTeam-content-item__subtitle">Office Director</p>
           <div class="ourTeam-content-item-social">
             <span class="ourTeam-content-item__social-icon"></span>
@@ -299,7 +299,7 @@
         </div>
         <div class="ourTeam-content-item">
           <img class="ourTeam-content-item__img" src="img/ourTeam/Ronobir.jpg" alt="photo of Ronobir" class="ourTeam-content-item__img">
-          <h2 class="ourTeam-content-item__title">Ronobir sing</h2>
+          <h3 class="ourTeam-content-item__title">Ronobir sing</h3>
           <p class="ourTeam-content-item__subtitle">Admin</p>
           <div class="ourTeam-content-item-social">
             <span class="ourTeam-content-item__social-icon"></span>
@@ -313,6 +313,54 @@
         <button class="ourTeam-slider__button"></button>
         <button class="ourTeam-slider__button"></button>
         <button class="ourTeam-slider__button"></button>
+      </div>
+    </div>
+  </section>
+  <section class="blog">
+    <div class="container">
+      <div class="preface">
+        <div class="preface__wrap">
+          <h2 class="preface__title">Blog</h2>
+          <p class="preface__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        </div>
+      </div>
+      <div class="blog-content">
+        <div class="blog-content-wrap">
+            <div class="blog-content-img">
+                <img class="blog-content__img" src="img/blog/seo.jpg" alt="image 'SEO'" class="blog-conent__img">
+              </div>
+              <div class="blog-content-item">
+                <h3 class="blog-content__item-title">SEO Quis Vestibulum</h3>
+                <span class="blog-content__item-date"><span class="blog-content__item-date-icon"></span>14.07.2017</span>
+                <span class="blog-content__item-type"><span class="blog-content__item-type-icon"></span>Development</span>
+                <p class="blog-content__item-description">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat...</p>
+              </div>
+        </div>
+        <div class="blog-content-wrap">
+            <div class="blog-content-item blog-content-second">
+                <h3 class="blog-content__item-title">SEO Quis Vestibulum</h3>
+                <span class="blog-content__item-date"><span class="blog-content__item-date-icon"></span>14.07.2017</span>
+                <span class="blog-content__item-type"><span class="blog-content__item-type-icon"></span>Development</span>
+                <p class="blog-content__item-description">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat...</p>
+              </div>
+              <div class="blog-content-img">
+                <img class="blog-content__img" src="img/blog/mac.jpg" alt="photo Mac" class="blog-conent__img">
+              </div>
+        </div>
+        <div class="blog-content-wrap">
+            <div class="blog-content-img">
+                <img class="blog-content__img" src="img/blog/mac2.jpg" alt="photo Mac" class="blog-conent__img">
+              </div>
+              <div class="blog-content-item">
+                <h3 class="blog-content__item-title">SEO Quis Vestibulum</h3>
+                <span class="blog-content__item-date"><span class="blog-content__item-date-icon"></span>14.07.2017</span>
+                <span class="blog-content__item-type"><span class="blog-content__item-type-icon"></span>Development</span>
+                <p class="blog-content__item-description">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat...</p>
+              </div>
+        </div>
+      </div>
+      <div class="blog-button">
+        <button class="blog__button button">More view</button>
       </div>
     </div>
   </section>
