Созданы секции 'Связаться с нами и Подвал' адаптированы для мобильных и планшетных устройств. Полностью закончена верстка сайта

--- a/index.html
+++ b/index.html
@@ -364,5 +364,44 @@
       </div>
     </div>
   </section>
+  <section class="contactUs">
+    <div class="container">
+      <div class="preface contactUs__preface">
+        <div class="preface__wrap">
+          <h2 class="preface__title">Contact Us</h2>
+          <p class="preface__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        </div>
+      </div>
+      <div class="contactUs-information">
+        <div class="contactUs-information-item">
+          <span class="contactUs-information-item__icon contactUs-information-item__icon-first"></span>
+          <p class="contactUs-information-item__description">Nobinagar savar,Dhaka <br/>Bangladesh</p>
+        </div>
+        <div class="contactUs-information-item">
+          <span class="contactUs-information-item__icon 
+          contactUs-information-item__icon-second"></span>
+          <p class="contactUs-information-item__phone">+8801743331996</p>
+          <p class="contactUs-information-item__phone">+8801928737807</p>
+        </div>
+        <div class="contactUs-information-item">
+          <span class="contactUs-information-item__icon 
+          contactUs-information-item__icon-third"></span>
+          <p class="contactUs-information-item__email">quickmasud@gmail.com</p>
+          <p class="contactUs-information-item__email">quickmasud@yahoo.com</p>
+        </div>
+      </div>
+      <div class="contactUs-form">
+        <input type="text" name="user Name" class="contactUs-form__input" placeholder="Your Name">
+        <input type="email" name="user Email" class="contactUs-form__input" placeholder="Your Email">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Write message" class="contactUs-form__textarea"></textarea>
+        <div class="contactUs-form-button">
+          <button class="contactUs-form__button">Send</button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="footer-discription">All rights Reserved © 2017</div>
+</footer>
 </body>
 </html>
