--- a/index.html
+++ b/index.html
@@ -4,12 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://lightning9966.github.io/webDevelopment/css/style.css">
+  <!-- <link rel="stylesheet" href="https://lightning9966.github.io/webDevelopment/css/style.css"> -->
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <title>webDevelopment</title>
 </head>
 <body>
-  <header class="header">
+  <header id="home" class="header">
+    <div class="navbarMobile">
+      <span class="navbarMobile__Close">
+        <span class="navbarMobile__closeLeft"></span>
+        <span class="navbarMobile__closeRight"></span>
+      </span>
+      <ul class="navbarMobile__list">
+          <li class="navbarMobile__item">
+            <a class="navbarMobile__link navbarMobile__linkFirst">Home</a>
+          </li>
+          <li class="navbarMobile__item">
+            <a href="#aboutUs" class="navbarMobile__link">About</a>
+          </li>
+          <li class="navbarMobile__item">
+            <a href="#ourServices" class="navbarMobile__link">Servicing</a>
+          </li>
+          <li class="navbarMobile__item">
+            <a href="#latestWorks" class="navbarMobile__link">Portfolio</a>
+          </li>
+          <li class="navbarMobile__item">
+            <a href="#blog" class="navbarMobile__link">Blog</a>
+          </li>
+          <li class="navbarMobile__item">
+            <a href="#contactUs" class="navbarMobile__link">Contact us</a>
+          </li>
+        </ul>
+    </div>
     <div class="navbar">
       <div class="container">
         <div class="navbar-wrap">
@@ -22,22 +49,22 @@
               </button>
               <ul class="navbar-menu navbar__menu">
                 <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Home</a>
+                  <a href="#home" class="navbar-menu__link">Home</a>
                 </li>
                 <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">About</a>
+                  <a href="#aboutUs" class="navbar-menu__link">About</a>
                 </li>
                 <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Servicing</a>
+                  <a href="#ourServices" class="navbar-menu__link">Servicing</a>
                 </li>
                 <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Portfolio</a>
+                  <a href="#latestWorks" class="navbar-menu__link">Portfolio</a>
                 </li>
                 <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Blog</a>
+                  <a href="#blog" class="navbar-menu__link">Blog</a>
                 </li>
                 <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Contact us</a>
+                  <a href="#contactUs" class="navbar-menu__link">Contact us</a>
                 </li>
               </ul>
               <div class="navbar-search">
@@ -54,8 +81,8 @@
             <h1 class="hero-content__title">Web development project</h1>
             <p class="hero-content__description">Very suitable to support all web development projects</p>
             <div class="hero-content__buttons-wrap">
-              <button class="button hero-content__button-first">Our services</button>
-              <button class="button hero-content__button-second">here is now</button>
+              <a href="#ourServices" class="button hero-content__button-first">Our services</a>
+              <a href="#blog" class="button hero-content__button-second">here is now</a>
               <a href="#aboutUs" class="hero-content__button-anchorLink"></a>
             </div>
           </div>
@@ -90,7 +117,7 @@
       </div>
     </div>
   </section>
-  <section class="ourServices">
+  <section id="ourServices" class="ourServices">
     <div class="container">
       <div class="preface">
         <div class="preface__wrap">
@@ -138,7 +165,7 @@
       </div>
     </div>
   </section>
-  <section class="latestWorks">
+  <section id="latestWorks" class="latestWorks">
     <div class="container">
       <div class="preface">
         <div class="preface__wrap">
@@ -266,7 +293,7 @@
         </div>
     </div>
   </section>
-  <section class="ourTeam">
+  <section id="ourTeam" class="ourTeam">
     <div class="container">
       <div class="preface">
         <div class="preface__wrap">
@@ -316,7 +343,7 @@
       </div>
     </div>
   </section>
-  <section class="blog">
+  <section id="blog" class="blog">
     <div class="container">
       <div class="preface">
         <div class="preface__wrap">
@@ -364,7 +391,7 @@
       </div>
     </div>
   </section>
-  <section class="contactUs">
+  <section id="contactUs" class="contactUs">
     <div class="container">
       <div class="preface contactUs__preface">
         <div class="preface__wrap">
@@ -403,5 +430,7 @@
   <footer class="footer">
     <div class="footer-discription">All rights Reserved © 2017</div>
 </footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
