--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
 <body>
   <header id="home" class="header">
     <div class="navbarMobile">
-      <span class="navbarMobile__Close">
-        <span class="navbarMobile__closeLeft"></span>
-        <span class="navbarMobile__closeRight"></span>
-      </span>
       <ul class="navbarMobile__list">
           <li class="navbarMobile__item">
             <a class="navbarMobile__link navbarMobile__linkFirst">Home</a>
@@ -49,7 +45,7 @@
               </button>
               <ul class="navbar-menu navbar__menu">
                 <li class="navbar-menu__item">
-                  <a href="#home" class="navbar-menu__link">Home</a>
+                  <a class="navbar-menu__link">Home</a>
                 </li>
                 <li class="navbar-menu__item">
                   <a href="#aboutUs" class="navbar-menu__link">About</a>
@@ -69,6 +65,7 @@
               </ul>
               <div class="navbar-search">
                 <span class="navbar-search__icon"></span>
+                <input type="search" placeholder="find" class="navbar-search__input">
               </div>
             </div>
         </div>
